[tool.poetry]
name = "infer_pyproject"
version = "0.1.0"
description = "Create a pyproject.toml file for an existing project."
authors = [
    "Martin Thoma <info@martin-thoma.de>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MartinThoma/infer_pyproject"
repository = "https://github.com/MartinThoma/infer_pyproject"
documentation = "https://github.com/MartinThoma/infer_pyproject"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0"

[tool.poetry.dev-dependencies]
black = "21.12b0"
pylint = "2.12.2"

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint]
    [tool.pylint.'MESSAGES CONTROL']
    enable=['all']
    disable=[
        'invalid-name', 
        'missing-class-docstring', 
        'missing-module-docstring', 
        'missing-function-docstring', 
        'trailing-whitespace', 
        'fixme',
        'too-many-locals',
        'too-many-arguments',
        'unused-argument',
        'import-error'
    ]
